# graphql-plus-plus

./: .clang-format  .clang-tidy  .clangd  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  HACKING.md  README.md
autocomplete/: completely.yaml
c++/gql/src/libgql/: CMakeLists.txt  CMakeTestLists.txt
c++/gql/src/libgql/src/: utils.cpp
c++/gql/src/libgql/src/__tests__/lexer/: token.schema.json
c++/gql/src/libgql/src/__tests__/lexer/cases/: case.schema.json  float.case.json  invalid-char.case.json  product-input.case.json
c++/gql/src/libgql/src/libgql/introspection/: introspection.hpp  query.data
c++/gql/src/libgql/src/libgql/json/: utils.hpp
c++/gql/src/libgql/src/libgql/json/parsers/: shared.hpp
c++/gql/src/libgql/src/libgql/lexer/: lexer.cpp  lexer_error.cpp  tokens_accumulator.cpp
check/: diff.sh  (+1 more)
cpp/gql/src/gql_cli/: CMakeLists.txt
cpp/gql/src/gql_cli/src/: main.cpp
cpp/gql/src/gql_cli/src/app/: config_action.cpp  config_action.hpp  gql_cli.cpp  gql_cli.hpp  utils.cpp  utils.hpp
cpp/gql/src/gql_cli/src/app/config/: config.cpp  config.hpp
cpp/gql/src/gql_cli/src/app/formatting/: error.cpp  error.hpp
cpp/gql/src/gql_cli/src/app/subcommands/diff/: diff.cpp
e2e-tests/rust-server/: Cargo.toml  build.rs
e2e-tests/rust-server/src/: main.rs
e2e-tests/rust-server/src/api/: context.rs  generated.rs  mod.rs  scalar.rs  state.rs
rust/cli/: .gitignore  Cargo.toml
rust/cli/src/cli/: mod.rs  utils.rs
rust/cli/src/cli/internal/: diff.rs  executor.rs  lexer.rs  mod.rs
rust/cli/src/cli/internal/parsers/: mod.rs
rust/cli/src/cli/internal/parsers/file/: client.rs  server.rs
rust/gql/: .gitignore  Cargo.toml
rust/gql/graphql/: journal.graphql  main.graphql
rust/gql/graphql/deals/: deals.get.graphql  deals.mutate.graphql
rust/gql/graphql/files/: files.get.graphql  files.mutate.graphql
rust/gql/graphql/files/upload/: upload.multipart.graphql  upload.put.graphql  upload.shared.graphql
rust/gql/graphql/tags/: tags.favourites.graphql  tags.get.graphql  tags.mutate.graphql
rust/gql/graphql/users/: users.active.graphql  users.auth.graphql  users.groups.graphql  users.pending.graphql
rust/gql/libgql/: Cargo.toml
rust/gql/libgql/src/: lib.rs
rust/gql/libgql/src/executor/: ast.rs  hashmap_registry.rs  mod.rs  registry.rs  variables.rs
rust/gql/libgql/src/json/: mod.rs
rust/gql/libgql/src/json/parsers/: mod.rs
rust/gql/libgql/src/json/parsers/introspection/: mod.rs
rust/gql/libgql/src/json/parsers/schema/: mod.rs
rust/gql/libgql/src/json/serializers/schema/: mod.rs
rust/gql/libgql/src/lexer/: mod.rs  tests.rs  token_type.rs  tokens.rs  utils.rs
rust/gql/libgql/src/parsers/file/: base.rs  mod.rs  tokens_source.rs
rust/gql/libgql/src/parsers/file/client/: ast.rs  mod.rs
rust/gql/libgql/src/parsers/file/server/: ast.rs  mod.rs
rust/gql/libgql/src/parsers/file/shared/: ast.rs
rust/gql/libgql/src/parsers/schema/: mod.rs  type_registry.rs  visitor.rs
rust/gql/libgql/src/parsers/schema/client/: ast.rs  directive.rs  errors.rs  fragment.rs  hash.rs  mod.rs  nodes.rs  operation.rs  schema.rs
rust/gql/libgql/src/parsers/schema/server/: arguments.rs  ast.rs  directive.rs  errors.rs  input.rs  interface.rs  mod.rs  nodes.rs  object.rs  schema.rs  union.rs
rust/gql/libgql/src/parsers/schema/shared/: ast.rs  input.rs  mod.rs  scalars.rs  source_text.rs
rust/gql/src/: main.rs  utils.rs
rust/gql/src/cli/: config.rs  mod.rs  utils.rs
rust/gql/src/cli/internal/: diff.rs  executor.rs  mod.rs
rust/gql/src/cli/internal/parsers/: mod.rs
rust/gql/src/cli/internal/parsers/file/: client.rs  mod.rs  server.rs
rust/gqlcodegen/: .gitignore  Cargo.toml
rust/gqlcodegen/macros/: Cargo.toml
rust/gqlcodegen/macros/src/: enum_type.rs  lib.rs  object.rs  scalar.rs  shared.rs  union.rs
rust/gqlcodegen/src/: check.rs  format.rs  generated.rs  lib.rs  main.rs  scalar.rs
rust/gqlcodegen/src/generator/: config.rs  enums.rs  input.rs  main.rs  mod.rs  object.rs  shared.rs  union.rs
rust/gqlcodegen/src/schema/: mod.rs  schema.rs  shared.rs
rust/gqlcodegen/src/schema/client/: argument.rs  directive.rs  fragment.rs  mod.rs  operation.rs  schema.rs
rust/gqlcodegen/src/schema/server/: directive.rs  gqlenum.rs  input.rs  mod.rs  object.rs  schema.rs  union.rs
rust/libgql/: Cargo.toml
rust/libgql/src/: lib.rs
rust/libgql/src/executor/: ast.rs  hashmap_registry.rs  mod.rs  mutations.rs  object.rs  queries.rs  registry.rs  scalar.rs  shared.rs  subscription.rs  subscriptions.rs  sync.rs  variables.rs
rust/libgql/src/executor/variables/: array.rs  mod.rs
rust/libgql/src/json/: mod.rs
rust/libgql/src/json/executor/: ast.rs
rust/libgql/src/json/parsers/: mod.rs
rust/libgql/src/json/parsers/introspection/: mod.rs
rust/libgql/src/json/parsers/schema/: mod.rs
rust/libgql/src/json/serializers/schema/: mod.rs
rust/libgql/src/lexer/: conditions.rs  mod.rs  tests.rs  token_type.rs  tokens.rs  types.rs  utils.rs
rust/libgql/src/parsers/file/: base.rs  mod.rs  tokens_source.rs  tokens_sources.rs
rust/libgql/src/parsers/file/client/: ast.rs  mod.rs
rust/libgql/src/parsers/file/server/: ast.rs  mod.rs
rust/libgql/src/parsers/file/shared/: ast.rs
rust/libgql/src/parsers/schema/: mod.rs  type_registry.rs  visitor.rs
rust/libgql/src/parsers/schema/client/: ast.rs  directive.rs  errors.rs  fragment.rs  hash.rs  mod.rs  nodes.rs  operation.rs  schema.rs  server_uses_map.rs  type_registry.rs  visitor.rs
rust/libgql/src/parsers/schema/server/: arguments.rs  ast.rs  directive.rs  errors.rs  input.rs  interface.rs  mod.rs  nodes.rs  object.rs  scalars.rs  schema.rs  type_registry.rs  union.rs
rust/libgql/src/parsers/schema/shared/: arguments.rs  ast.rs  input.rs  literal.rs  mod.rs  source_text.rs
src/gql_cli/: CMakeLists.txt
src/gql_cli/src/app/: gql_cli.cpp
src/gql_cli/src/app/subcommands/diff/: diff.hpp
src/gql_cli/src/app/subcommands/lexer/: lexer.cpp
src/gql_cli/src/app/subcommands/parser/: parser.cpp
test/: CMakeLists.txt
test/source/: gql_test.cpp  graphql--_test.cpp
(+719 files in other folders)
