[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
chrono = { version = "0.4.44", default-features = false }
clap = { version = "4.5.54", features = ["derive", "std"], default-features = false }
futures-core = { version = "0.3.32", default-features = false }
futures-util = { version = "0.3.32", default-features = false }
glob = "0.3.3"
indexmap = { version = "2.13.0", features = ["std"], default-features = false }
libgql = { path = "../libgql" }
reqwest = { version = "0.13.2", default-features = false, features = ["blocking"] }
serde = { version = "1.0.228", features = ["rc"], default-features = false }
serde_json = { version = "1.0.148", default-features = false }
serde_yaml = "0.9.34"
url = { version = "2.5.8", default-features = false }
