[package]
name = "libgqlcodegen"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
codegen = "0.3.0"
convert_case = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_json_path_to_error = "0.1.5"
url = "2.5.7"
uuid = "1.19.0"
libgql = { path = "../libgql" }
indexmap = "2.13.0"
libgqlcodegen_macros = { path = "./macros" }
syn = { version = "2.0.117", features = ["full"] }
quote = "1.0.45"

[dev-dependencies]
pretty_assertions = "1.4.1"
