[package]
name = "libgql"
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "Library for parsing and executing gql queries"
repository = "https://github.com/Voldemat/graphql-plus-plus"

[dependencies]
async-stream = "0.3.6"
derive_more = { version = "2.1.0", features = ["from", "display"] }
futures = "0.3.32"
futures-core = "0.3.32"
indexmap = { version = "2.12.1", features = ["serde"] }
serde = { version = "1.0.228", features = ["serde_derive", "rc"] }
serde_json = { version = "1.0.148", features = ["preserve_order"] }
serde_json_path_to_error = "0.1.5"
struson = { version = "0.6.0", features = ["simple-api"] }
