[package]
name = "libgql"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.1.0", features = ["from"] }
indexmap = { version = "2.12.1", features = ["serde"] }
serde = { version = "1.0.228", features = ["serde_derive", "rc"] }
serde_json = "1.0.148"
serde_json_path_to_error = "0.1.5"
