[package]
name = "libgql"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.1.0", features = ["from", "display"] }
indexmap = { version = "2.12.1", features = ["serde"] }
serde = { version = "1.0.228", features = ["serde_derive", "rc"] }
serde_json = { version = "1.0.148", features = ["preserve_order"] }
serde_json_path_to_error = "0.1.5"
struson = { version = "0.6.0", features = ["simple-api"] }
